; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_value.c_json_object_set_new_nocheck.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_value.c_json_object_set_new_nocheck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @json_object_set_new_nocheck(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %39

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %12
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @json_is_object(i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = load i32*, i32** %5, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = icmp eq i32* %20, %21
  br i1 %22, label %23, label %26

23:                                               ; preds = %19, %15, %12
  %24 = load i32*, i32** %7, align 8
  %25 = call i32 @json_decref(i32* %24)
  store i32 -1, i32* %4, align 4
  br label %39

26:                                               ; preds = %19
  %27 = load i32*, i32** %5, align 8
  %28 = call %struct.TYPE_3__* @json_to_object(i32* %27)
  store %struct.TYPE_3__* %28, %struct.TYPE_3__** %8, align 8
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i8*, i8** %6, align 8
  %32 = load i32*, i32** %7, align 8
  %33 = call i64 @hashtable_set(i32* %30, i8* %31, i32* %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %26
  %36 = load i32*, i32** %7, align 8
  %37 = call i32 @json_decref(i32* %36)
  store i32 -1, i32* %4, align 4
  br label %39

38:                                               ; preds = %26
  store i32 0, i32* %4, align 4
  br label %39

39:                                               ; preds = %38, %35, %23, %11
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i32 @json_is_object(i32*) #1

declare dso_local i32 @json_decref(i32*) #1

declare dso_local %struct.TYPE_3__* @json_to_object(i32*) #1

declare dso_local i64 @hashtable_set(i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
